integracion con nueva API PDB